--- a/glossary.org
+++ b/glossary.org
@@ -21,3 +21,77 @@ AR: The result of superimposing digital information on top of real-time human op
 HDM: Varying pieces of hardware resembling goggles or glasses providing technological assets needed for experiencing XR. 
 
 SOP: Standard operating procedure implemented by groups of individuals working together. These are processes meant to regulate workflow for maximizing quality and efficiency.  
+...
+
+MARKETING TITLES:
+
+GOOGLE:
+
+NOVA XR | Media Production: Dream Awake https://www.novamedia.nyc Nova XR provides access to advanced technologies and strategic development
+
+Virtual / Augmented Reality: Architect virtual worlds, deploy 3D game engines and develop AR mobile applications
+
+New Years Eve: Live in 360º VR from around the world - join the celebration!
+
+Build XR: Free price quote and strategy by answering these 5 questions
+
+Research: XR Financial Strategies, Marketing Evaluation, Persuasion Systems
+
+==========
+
+TWITTER
+
+Nova XR Media - New York Production Studio Dream Awake | Your access throughout the revolution, renaissance and singularity. Learn how to design, build and distribute XR media content.
+
+========
+
+FACEBOOK
+
+Nova XR Media - New York Production Studio
+
+Dream Awake Your access to advanced media and strategic development. Learn how to design, build and distribute immersive content.
+
+==============
+
+BING
+
+NOVA XR Media - Production Studio | Dream Awake
+
+Nova XR creates VR software, customized and strategic.
+
+New Year’s Eve: Live Global VR Stream - Join the celebration, pre-register for free
+
+Infinite Art Gallery: Want to see your art in an infinite gallery? email us ;)
+
+Answer the following five questions to get a price range, time table and next steps build your own extending reality
+
+Blog: (latest title) and headline + beginning
+
+About us: Who is Nova XR?
+
+Successful Stories: Explore the world and live out your dreams. Go places you’ve never been. Now.
+
+How to Begin: Build your own extensive reality experience concept in a matter of minutes. Get involved.
+
+=========================
+
+DUCKDUCKGO
+
+NOVA XR. [Media Tech Production House] Dream Awake
+
+...
+
+We are open most days, all hours, by appointment. 481 Van Brunt, Brooklyn, New York, 11231
+
+map : https://www.google.com/maps/search/xr+media/@40.658784,-74.0266566,12z/data=!3m1!4b1
+[text box Message Submit ]
+
+Email : AnnaIrene@novamedia.nyc
+Telegram : https://t.me/xrnewyork
+Instagram : @novaxrmedia
+Facebook : https://www.facebook.com/N0vamedia/
+Twitter : @N0vamedia
+GoogleVoice : (732) 903-5537
+slack : novamedianyc.slack.com
+steemit : @novaxr
+Sketchfab : /novamedianewyork
