--- a/glossary.org
+++ b/glossary.org
@@ -8,19 +8,19 @@
 
 - Distribute: Determining the channels through which the product or content will be deployed. A campaign may be distributed across a VR app store, on Web GL, via YouTube, etc. 
 
-Game Engine: A 3D space in which interactive digital experiences are built. It's the equivalent to the factory space in which an automobile is created. 
+- Game Engine: A 3D space in which interactive digital experiences are built. It's the equivalent to the factory space in which an automobile is created. 
 
-Booth Portal: A physical-world architecture meant as a segway, creating continuity between the area in which the user dons the VR headset and the Virtual World they enter into. This is a marketing concept and typically manifests as a replica of place or object that exists inside the accompanying Virtual experience. 
+- Booth Portal: A physical-world architecture meant as a segway, creating continuity between the area in which the user dons the VR headset and the Virtual World they enter into. This is a marketing concept and typically manifests as a replica of place or object that exists inside the accompanying Virtual experience. 
  
-VR: Digitally immersive worlds created in a game engine and/or from 360 lens-captured content. In 2018 VR is accessible through head mounted displays. 
+- VR: Digitally immersive worlds created in a game engine and/or from 360 lens-captured content. In 2018 VR is accessible through head mounted displays. 
 
-MR: The result of superimposing real world lens-captured content into a VR world. 
+- MR: The result of superimposing real world lens-captured content into a VR world. 
 
-AR: The result of superimposing digital information on top of real-time human optical perception. AR is accessed through HMDs or handheld devices. 
+- AR: The result of superimposing digital information on top of real-time human optical perception. AR is accessed through HMDs or handheld devices. 
 
-HDM: Varying pieces of hardware resembling goggles or glasses providing technological assets needed for experiencing XR. 
+- HDM: Varying pieces of hardware resembling goggles or glasses providing technological assets needed for experiencing XR. 
 
-SOP: Standard operating procedure implemented by groups of individuals working together. These are processes meant to regulate workflow for maximizing quality and efficiency.  
+- SOP: Standard operating procedure implemented by groups of individuals working together. These are processes meant to regulate workflow for maximizing quality and efficiency.  
 ...
 
 MARKETING TITLES:
