--- a/Pages/3About nova/1Who we are/Community---4web.org
+++ b/Pages/3About nova/1Who we are/Community---4web.org
@@ -2,13 +2,23 @@
 
 Community
 
+A shout to our friends and family.  Without ya'll Nova is nothing.  
+
 * Second 
 Our open door philosophy attracts a range of people from varying communities. This makes Nova Studios an idea hub for crafting market opportunities. 
 
 ** Redu Media
 Redu is making obsolescence obsolete. A close member of Nova's family, Redu is dedicated to upcycling materials that would otherwise go to waste. Amber and Kaya lead /rescues/, traveling throughout the tri state area to collect materials and prevent them from going to landfill. Back inside Redu's design studio, the materials are tastefully crafted into furniture and applied art.
 
-** Julie and Christiana 
+** Surf-Far
+
+Produces eco-friendly wetsuits for women, by women.   Made of Yulex or recycled neoprene, recycled water bottles, and water based glues Surf-Far designs comfortable and durable wetsuits that have a low impact on the environment.  As surfers, ocean lovers, and humans, is ensuring that future generations have the opportunity to enjoy this earth the way we all enjoy it today.  Brooklyn, New York. 
+
+
+** Fulla Shirts
+
+Fulla designs and produces T-shirts to order.  As a Red Hook native, Ren and his team know what it means to be Brooklyn, and to deliver style.  Swing by the shop anytime to kick it with a true entrepreneur and a good friend.   
+
 
 ** Potential Synergy 
 At the forefront of XR technology development, Potential Synergy builds lucid dreams. They also build practical XR solutions. At the forefront of the studio's cornerstone products is /Dreamscaping/ - a principle designed to eliminate the dizzyness some users experienced inside the Oculus Rift. Their current project - Match Quest - tests short and longterm memory. As users succeed within the game, they become closer and closer to obtaining real Ethereum. 
