--- a/August3.org
+++ b/August3.org
@@ -1,9 +1,9 @@
 ** Physics Engine (refined) 
 A physics engine allows us to incorporate the laws of physics (or create our own physical laws) and implement them into XR experiences. The behavior of light, rain, the laws of gravity, and the relationship between objects are all programmable in a physics engine. 
 
-With a virtual environment that includes human movement, we must program their virtual characteristics. When building an environment of virtual football players, for example, we must assign certain properties to each player. X player weighs y pounds and has the ability to jump z height. 
+With a virtual environment that includes human movement, we must program all the virtual capabilities and restrictions. When building an environment of virtual football players, for example, we assign certain properties to each player. X player weighs Y pounds and has the ability to jump Z height. 
 
-For many virtual creators, it's important that the constructed environment abides by basic real-world physical parameters. For example, when the user makes contact with a wall in a virtual space, the VR builder can work with a physics engine to cause the user's movement to be interrupted by this wall, rather than passing directly through it. 
+For many virtual creators, it's important that the constructed environment abides by basic real-world physical parameters. For example, when the user approaches a wall in a virtual space, the physics engine is the tool used to determine whether the user collides with the wall or passes directly through it. 
 
 "Unity" supports the most dynamic physics engine.
 
@@ -43,13 +43,13 @@ classical mechanics
 
 ...
 ** Python (refined) 
+# Machine Learning Language 
+
 Python is a succinct, object oriented programming language. It's scripting capabilities allow programmers to design visual assets by writing lines of code into a game engine like Blender. Not only can we generate shapes with python but we can also manipulate, scale, and put them into motion. 
 
-Python is also used for networking the server that will handle the database for your VR experience.
+This is the default language of the machine learning world. While machine learning toolboxes are written in C++ (for performance benefits), we often use python as the intermediary tool to access these stores. In this way, it functions as a librarian who retrieves a book for us from the stacks.Combining these languages blends the succinctness of python with the high performance of C++. 
 
-This is the default language of the machine learning world. While machine learning toolboxes are written in C++ (for performance benefits), we often use python as the intermediary tool to access these stores. Combining these languages for this combines the succinctness of python with the performance of C++ For this purpose, it functions as a librarian who retrieves a book for us from the stacks.
-
-Python is not so applicable to direct vr creation but it enables functionalities that VR wants in order to reach maximum performance  
+Python is not so applicable to direct VR creation but it enables functionalities that VR wants in order to reach maximum performance.
 
 ** Python (Raw) 
  - Python is a succinct language. 
