updated productions web text

--- a/FullWebTextJuly2018.org
+++ b/FullWebTextJuly2018.org
@@ -894,10 +894,80 @@ Business is conducted among people. We love building relationships with folks fr
 **** Productions
 
 ***** Hard Rock 
+Hard Rock Riviera Maya had a PR objective to earn big media. They had access to top music talent and a badass resort in Mexico.
+
+# Solution
+"Elvis Rocks Mexico - Riviera Maya"
+
+Throw a massive party 400 attendees Match Top music Talent Strategically promoted Earn coverage
+
+# Execution
+Live From Mexico we broadcasted a weekend of dysfunctional family fun to 63 million.   Live music performances from Nick Jonas and Brett Michaels, all the beach, spa and partying anyone person could handle... 
+
+# Results
+- 201,008,806 Gross Impressions
+- 280,000 contest entries
+- $2.59 million media/PR value (15cpm)
+- 86 million social media impressions
+- 400 attendees
+- $97,000 avg HHI
+- 73% Earned Media
+
+# Content
+It was the dead cold of winter. Those endlessly numb days. It was still dark but half the city was on their way to work.   At 7:29AM while inching through traffic, Elvis Duran in his jolly voice announced to the country his plans for vacation.   His words reverbed live to 75 cities and  was giving away vacations to5 million people.  This May he and his family would be flying to the Hard Rock Riviera Maya Resort in Mexico.
+
+Hyped as the vacation of the year, 400x people purchased packages to join the parties.
+
+We recruited Nick Jonas and Brett Michaels to join.
+
+Over the weekend hundreds lived life to the fullest via Hard Rock's all inclusive, while millions enjoyed vicariously.   The program earned more than 85 million impressions on social media, alone.  
+
+Media outlets across the country picked up the fun, earning more than 200 million impressions and more than $2.5 million in media value.
+
+The vacation has now become a tradition.
 
 ***** Hawaii 
+Hawaiian airlines was launching a new flight from JFK direct to Honolulu and needed people to know about it.
+
+# Solution
+Multi-platform promotion through traditional media, digital targeting and on-site activation.
+
+# Execution
+Starting in April we surveyed New York metro about airlines, trafficked customized commercial media, called participants to action and produced world-class content. On-stage in front of thousands of professionals Hawaiian Airlines brought culture to life and associated it with the new route's details. The response was unforgettable.
+
+# Results
+- Increased brand recognition by 12.1%
+- Click-through rate four times the national average
+- 11% greater reach than predicted
 
 ***** Kelly Vision 
+
+Dr. Kelly was looking for a way to combine the mass reach of traditional media with modern technologies of digital tracking to quantifiably measure his return on investment
+
+# Objective
+To get people in the door and start taking their considerations of vision enhancement seriously.
+
+Educate and welcome prospective patients into our family and computer system
+
+Evaluate the cost per eye.
+
+Investment $30,000 to return $35 surgeries.
+
+# Campaign
+Brand ambassador on 5 top media outlets for full scope of media deliverables.
+
+Promotion code to track business (interests, connections, bookings, payments.
+
+Adjusted content on the fly to improve ROI
+
+# Results
+- Delivered more than $20k in vision business in 21 days.
+
+- 100 surgeries in 10 months
+
+- 50+ phone calls received
+
+- 1,000 + text messages
 
 ***** Northern Australia 
 
