updated web text for productions pages

--- a/FullWebTextJuly2018.org
+++ b/FullWebTextJuly2018.org
@@ -899,13 +899,13 @@ Hard Rock Riviera Maya had a PR objective to earn big media. They had access to 
 # Solution
 "Elvis Rocks Mexico - Riviera Maya"
 
-Throw a massive party 400 attendees Match Top music Talent Strategically promoted Earn coverage
+- Throw a massive party with 400 attendees and match top music talent to strategically promote earned coverage. 
 
 # Execution
-Live From Mexico we broadcasted a weekend of dysfunctional family fun to 63 million.   Live music performances from Nick Jonas and Brett Michaels, all the beach, spa and partying anyone person could handle... 
+Live From Mexico we broadcasted to 63 million people Live music performances from Nick Jonas and Brett Michaels. The festivities included all the beach, spa, and partying anyone person could handle... 
 
 # Results
-- 201,008,806 Gross Impressions
+- 201,008,806 gross impressions
 - 280,000 contest entries
 - $2.59 million media/PR value (15cpm)
 - 86 million social media impressions
@@ -914,13 +914,13 @@ Live From Mexico we broadcasted a weekend of dysfunctional family fun to 63 mill
 - 73% Earned Media
 
 # Content
-It was the dead cold of winter. Those endlessly numb days. It was still dark but half the city was on their way to work.   At 7:29AM while inching through traffic, Elvis Duran in his jolly voice announced to the country his plans for vacation.   His words reverbed live to 75 cities and  was giving away vacations to5 million people.  This May he and his family would be flying to the Hard Rock Riviera Maya Resort in Mexico.
+It was the dead cold of winter. Those endlessly numb days. It was still dark but half the city was on their way to work. At 7:29AM while inching through traffic, Elvis Duran in his jolly voice announced to the country his plans for vacation. His words reverbed live through 75 cities and were giving away vacations to 5 million people. His message: in just a few months, he and his family would be flying to the Hard Rock Riviera Maya Resort in Mexico.
 
-Hyped as the vacation of the year, 400x people purchased packages to join the parties.
+Hyped as The" vacation of the year, 400 people purchased packages to join the event.
 
-We recruited Nick Jonas and Brett Michaels to join.
+We recruited Nick Jonas and Brett Michaels to perform.
 
-Over the weekend hundreds lived life to the fullest via Hard Rock's all inclusive, while millions enjoyed vicariously.   The program earned more than 85 million impressions on social media, alone.  
+Over the weekend, hundreds lived life to the fullest via Hard Rock's all-inclusive. In the meantime, millions enjoyed vicariously through our broadcast. The program earned more than 85 million impressions on social media alone.   
 
 Media outlets across the country picked up the fun, earning more than 200 million impressions and more than $2.5 million in media value.
 
@@ -930,10 +930,10 @@ The vacation has now become a tradition.
 Hawaiian airlines was launching a new flight from JFK direct to Honolulu and needed people to know about it.
 
 # Solution
-Multi-platform promotion through traditional media, digital targeting and on-site activation.
+Multi-platform promotion through traditional media, digital targeting, and on-site activation.
 
 # Execution
-Starting in April we surveyed New York metro about airlines, trafficked customized commercial media, called participants to action and produced world-class content. On-stage in front of thousands of professionals Hawaiian Airlines brought culture to life and associated it with the new route's details. The response was unforgettable.
+Starting in April we surveyed the New York metro area about airlines, trafficked customized commercial media, called participants to action, and produced world-class content. On-stage in front of thousands of professionals Hawaiian Airlines brought its culture to life with the new route details. The response was unforgettable.
 
 # Results
 - Increased brand recognition by 12.1%
@@ -942,23 +942,23 @@ Starting in April we surveyed New York metro about airlines, trafficked customiz
 
 ***** Kelly Vision 
 
-Dr. Kelly was looking for a way to combine the mass reach of traditional media with modern technologies of digital tracking to quantifiably measure his return on investment
+Dr. Kelly was looking for a way to combine the mass reach of traditional media with modern technologies of digital tracking to quantifiably measure his return on investment.
 
 # Objective
-To get people in the door and start taking their considerations of vision enhancement seriously.
+- To get people in the door to seriously consider vision enhancement.
 
-Educate and welcome prospective patients into our family and computer system
+- Educate and welcome prospective patients into our family and computer system.
 
-Evaluate the cost per eye.
+- Evaluate the cost per eye.
 
-Investment $30,000 to return $35 surgeries.
+- Investment $30,000 to return $35 surgeries.
 
 # Campaign
-Brand ambassador on 5 top media outlets for full scope of media deliverables.
+- Brand ambassador on 5 top media outlets for full scope of media deliverables.
 
-Promotion code to track business (interests, connections, bookings, payments.
+- Promotion code to track business (interests, connections, bookings, payments.
 
-Adjusted content on the fly to improve ROI
+- Adjusted content on the fly to improve ROI
 
 # Results
 - Delivered more than $20k in vision business in 21 days.
@@ -970,6 +970,23 @@ Adjusted content on the fly to improve ROI
 - 1,000 + text messages
 
 ***** Northern Australia 
+Not everyone thinks to visit the Northern Territory when they plan their trip downunder. The destination can be relatively expensive and people do not realize that the experience here is superb. 
+
+# Solution
+- Work with an opinion leader to position the destination properly
+- Use the platform of this loyal audience to target the right market, at the right time, and with a message to get them to take action
+- Generate leads and capture contact information to follow up with continued dialogue
+
+# Execution
+Pauline Frommer to visit the Outback and record webisodes
+While in destination and upon return, push out social media and radio “live-cuts” sharing the experience in real time
+Upon return, run testimonials on-air, run pre-rolls of the video in iHeartRadio
+Contest to win a trip have as similar experience
+
+# Results
+- Over delivered by more than 800,000 impressions.
+- The experience became natural conversation for Pauline at events, travel shows and in her online/on-air conversations with the audience
+- An over-delivery of contest entries and a 40% opt-in rate to receive more information!
 
 *** Partners 
 Just like creating a Hollywood film or an advertising campaign, XR production requires the unification of investors, production studios, innovation labs, writers, and videographers.
